<package>
	<name>motoman_mh5l_support</name>
	<version>0.0.1</version>
	<description>
		<p>ROS Industrial support for the Motoman MH5LS II and MH5LF.</p>
		<p>This package contains configuration data, 3D models and launch files for Motoman mh5l manipulators.</p>
		<p>
			<b>Specifications</b>
		</p>
		<ul>
			<li>MH5L - Default</li>
		</ul>
		<p>
			Joint limits and maximum joint velocities are based on the information from the datasheet:
			http://motoman.com/datasheets/MH5SII_MH5LSII.pdf
			All urdfs are based on the default motion and joint velocity limits, unless noted otherwise.
		</p>
		<p>
			Before using any of the configuration files and / or meshes included in this package,
			be sure to check they are correct for the particular robot model and configuration you intend to use them with.
		</p>
	</description>

	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<author email="shaun.edwards@gmail.com">Shaun Edwards</author>
	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<license>Apache v2.0</license>

	<url type="website">http://ros.org/wiki/motoman_mh5l_support</url>
	<url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
	<url type="repository">https://github.com/ros-industrial/motoman</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roslaunch</build_depend>
	<run_depend>joint_state_publisher</run_depend>
	<run_depend>motoman_driver</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>rviz</run_depend>

	<export>
		<architecture_independent/>
	</export>
</package>
